# rpg_gm_helper

./: .gitignore  AGENTS.md  README.md  handoff.md
backend/: .env.example  .env.test.example  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260404_0001_initial_schema.py  20260410_0002_relationship_semantics_v1.py  20260502_0003_sessions_source_assets_reshape.py
backend/app/: config.py  db.py  enums.py  main.py
backend/app/api/: dependencies.py  router.py
backend/app/api/routes/: campaigns.py  compatibility.py  entities.py  health.py  owners.py  (+2 more)
backend/app/models/: __init__.py  asset_parse_result.py  base.py  campaign.py  entity.py  extraction.py  owner.py  relationship.py  relationship_type_definition.py  session.py  session_note.py  source_asset.py  source_document.py
backend/app/schemas/: __init__.py  campaigns.py  compatibility.py  entities.py  entity_types.py  health.py  owners.py  relationship_types.py  relationships.py  types.py
backend/app/services/: __init__.py  campaign_lookup.py  campaign_service.py  compatibility_service.py  entity_service.py  owner_service.py  relationship_catalog.py  relationship_descriptor_resolver.py  relationship_mapper.py  relationship_service.py  relationship_type_mapper.py  relationship_type_service.py
backend/tests/: conftest.py  factories.py  pg_test_support.py  test_api_models.py  test_api_router.py  test_app_bootstrap.py  test_campaign_lookup.py  test_campaigns_api.py  test_compatibility_api.py  test_config.py  test_db.py  test_entities_api.py  test_main.py  test_migrations.py  test_models.py  test_owners_api.py  test_pg_test_support.py  test_relationship_catalog.py  test_relationship_type_mapper.py  test_relationship_type_routes.py  test_relationship_types_api.py  test_relationships_api.py  test_request_schemas.py
(+97 files in other folders)
