[project]
name = "rpg-gm-helper-backend"
version = "0.1.0"
description = "Backend for the RPG GM Helper application"
requires-python = ">=3.14,<3.15"
dependencies = [
    "alembic>=1.14.0",
    "fastapi>=0.116.0",
    "psycopg[binary]>=3.2.0",
    "pydantic-settings>=2.10.0",
    "sqlalchemy>=2.0.0",
    "uvicorn[standard]>=0.35.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.0",
    "pytest>=8.3.0",
    "ruff>=0.12.0",
]

[tool.uv]
package = false

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I"]
