[project]
name = "rpg-gm-helper-backend"
version = "0.1.0"
description = "Backend for the RPG GM Helper application"
requires-python = ">=3.14,<3.15"
dependencies = [
    "alembic>=1.14.0",
    "fastapi>=0.116.0",
    "psycopg[binary]>=3.2.0",
    "pydantic-settings>=2.10.0",
    "sqlalchemy>=2.0.0",
    "uvicorn[standard]>=0.35.0",
]

[dependency-groups]
dev = [
    "factory-boy>=3.3.0",
    "httpx>=0.28.0",
    "pytest>=8.3.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.12.0",
]

[tool.uv]
package = false

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "--cov=app --cov-report=term-missing"

[tool.coverage.run]
source = ["app"]
omit = ["*/__init__.py",]

[tool.coverage.report]
exclude_also = [
    "if __name__ == .__main__.:",
]

[tool.ruff]
line-length = 125
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I"]
